--- a/Reservia.css
+++ b/Reservia.css
@@ -67,6 +67,8 @@ body {
   min-width: 340px;
   max-width: 1440px;
   margin: 0 auto;
+  overflow-x: hidden;
+  padding: 15px;
 }
 
 .menu {
@@ -130,13 +132,10 @@ body {
 
 h1 {
   font-size: large;
-  padding: 10px;
 }
 
-p.title {
+p {
   font-size: small;
-  margin: 0px;
-  padding: 10px;
 }
 
 h3 {
@@ -159,7 +158,6 @@ h3 {
 #container-recherche {
   display: flex;
   padding: 20px 0px 30px 0px;
-  padding: 10px;
 }
 
 .type-search {
@@ -233,14 +231,12 @@ h3 {
 .filtres .content {
   display: flex;
   flex-flow: row wrap;
-  padding: 10px;
 }
 
 .filtres .title {
   margin-bottom: 20px;
   padding-top: inherit;
   padding-right: 20px;
-  padding: 10px;
 }
 
 .filtres .boutonfiltre {
@@ -251,7 +247,7 @@ h3 {
   height: 50px;
   position: relative;
   padding-left: 55px;
-  padding-right: 15px;
+  padding-right: 14px;
   margin-right: 20px;
   margin-bottom: 10px;
   transition: transform 0.2s;
@@ -305,21 +301,19 @@ h3 {
   border: 1px solid #ddd;
   border-radius: 50%;
   margin-right: 10px;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
 }
 
 /*******************Logement**********************/
 
 .conteneur-logement {
   display: flex;
-  padding: 10px;
 }
 
 p {
   font-size: 0.8em;
-  margin: 0px;
-  padding: 10px;
+  margin: 1px;
 }
 
 .search {
@@ -347,7 +341,7 @@ p {
 
 .hebergement_montrer_plus {
   font-weight: bold;
-  margin: 5px;
+  margin: 2px;
 }
 
 .heb-pop-container {
@@ -391,7 +385,6 @@ p {
   transition: transform 0.2s;
   cursor: pointer;
   padding: 5px;
-  margin: 10px;
 }
 
 .heb-container .card {
@@ -418,6 +411,7 @@ p {
   background-color: #f2f2f2;
   flex-direction: column;
   width: 30%;
+  padding: 10px;
   border-radius: 10px;
   padding: 30px;
 }
@@ -484,16 +478,6 @@ h3 {
   font-size: 0.8em;
 }
 
-h4 {
-  display: block;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    padding: 15px;
-}
-
 a {
   color: black;
   text-decoration: none;
@@ -530,15 +514,13 @@ a {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  margin-right: 0px;
-  margin-left: 20px;
-  width: 100%;
+  margin-right: 10px;
 }
 
-.activities h1 {
+.activities h2 {
   grid-column: 1/-1;
-  padding-bottom: 10px;
-  padding: 30px;
+  padding-bottom: 0px;
+  margin: 5px;
 }
 
 .title-activities {
@@ -552,8 +534,9 @@ footer {
   background-color: #f2f2f2;
   display: flex;
   justify-content: space-between;
-  padding: 30px;
-  width: 100%;
+  padding: 20px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 /*************** Only desktop *******************/
@@ -624,7 +607,7 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -50px;
+    margin-top: -86px;
     margin-left: 10px;
     position: absolute;
   }
@@ -688,8 +671,11 @@ footer {
   }
 
   .pop-container {
-    width: calc(100% - 20px);
+    width: calc(100% - 60px);
     order: 1;
+  }
+
+  .pop-container {
     display: flex;
     background-color: #f2f2f2;
     flex-direction: column;
@@ -699,10 +685,13 @@ footer {
     flex-direction: column;
   }
 
-  .activities h1 {
-    padding-bottom: 0px;
+  .card {
+    width: 100%;
+  }
+
+  .activities h2 {
+    padding-bottom: 10px;
     margin: 5px;
-    padding: 10px;
   }
 
   .activities {
@@ -731,12 +720,12 @@ footer {
 
   .register_link {
     margin-top: 20px;
-    margin-right: 20px;
+    margin-right: 30px;
   }
-  
+
   .header_logo {
     width: 120px;
-    margin-top: -50px;
+    margin-top: -45px;
     margin-left: 5px;
     position: absolute;
   }
@@ -806,46 +795,41 @@ footer {
 
   .heb-pop-container {
     flex-direction: column;
-    margin: -10px;
-    width: 115%;
+    margin: -16px;
+  }
+
+  .heb-container {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: #ffffff;
+    padding: 40px;
   }
 
   .heb-container {
     width: calc(100% - 60px);
     order: 2;
-    width: 90%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    background-color: #ffffff;
-    width: 70%;
-    padding: 30px;
   }
 
   .pop-container {
-    width: calc(100% - 20px);
+    width: calc(100% - 60px);
     order: 1;
+  }
+
+  .pop-container {
     display: flex;
     background-color: #f2f2f2;
     flex-direction: column;
     border-radius: 0px 0px 0px 0px;
-    width: 90%;
+    width: 91%;
   }
-
 
   .cards-line {
     flex-direction: column;
-    width: ;
   }
 
   .card {
-    width: 90%;
-  }
-
-  p {
-    margin: 0px;
-    padding: 2px;
+    width: 100%;
   }
 
   footer {
@@ -854,15 +838,15 @@ footer {
   }
 
   .activity h1{
-    padding-bottom: 10px;
-    padding: 22px;
+    margin: 10px;
+    padding: 0px;
   }
 
   .activities {
     row-gap: 2rem;
     grid-template-columns: 1fr;
     grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
-    width: 90%
+    padding: 15px; 
   }
 
 
@@ -884,6 +868,5 @@ footer {
     font-size: 1em;
     border-width: 1px;
     border-color: #f2f2f2;
-    border: 1px #ddd
   }
 }
