--- a/Reservia.css
+++ b/Reservia.css
@@ -29,6 +29,7 @@ a {
 li {
   list-style: none;
 }
+
 .header_container {
   display: flex;
   justify-content: space-between;
@@ -65,9 +66,7 @@ nav ul {
 }
 
 body {
-  min-width: 340px;
-  max-width: 1440px;
-  margin: 0 auto;
+  margin: 0;
   padding: 10px;
 }
 
@@ -79,20 +78,6 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
-}
-
-.navigation-container {
-  margin-right: 20px;
-}
-
-.navigation-link {
-  border: 2px solid transparent;
-  font-size: 1.3em;
-  padding-top: 37px;
-  /*padding-left: 15%; */
-  /*padding-right: 15%; */
-  margin-right: 40px;
-  text-decoration: none;
 }
 
 .navigation-link:hover {
@@ -532,8 +517,8 @@ footer {
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -9px;
+  margin-right: -9px;
 }
 
 /*************** Only desktop *******************/
@@ -604,11 +589,11 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -45px;
-    margin-left: 10px;
+    margin-top: 0px;
+	  padding-bottom:80px;
+    margin-left: 5px;
     position: absolute;
   }
-
   .navigation_container {
     width: 100%;
     margin-top: 20px;
@@ -720,7 +705,8 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -45px;
+    margin-top: 0px;
+	  padding-bottom:90px;
     margin-left: 5px;
     position: absolute;
   }
@@ -821,7 +807,7 @@ footer {
     background-color: #f2f2f2;
     flex-direction: column;
     border-radius: 0px 0px 0px 0px;
-    width: 91%;
+    width: 89%;
   }
 
   .cards-line {
